# support-notes-kb

./: .env.example  .gitignore  Dockerfile  FILE_TREE.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  cli.py  config.py  extensions.py  models.py
app/admin/: __init__.py  forms.py  routes.py
app/auth/: __init__.py  forms.py  routes.py
app/notes/: __init__.py  forms.py  routes.py
app/static/: style.css
app/tags/: __init__.py  routes.py
app/templates/: base.html
app/templates/admin/: user_edit.html  user_new.html  users.html
app/templates/auth/: login.html  logout.html  register.html
app/templates/notes/: confirm_delete.html  edit.html  index.html  view.html
app/templates/partials/: flash_messages.html  pagination.html
app/templates/tags/: edit.html  index.html
app/utils/: __init__.py  markdown.py
importers/: __init__.py  import_files.py  import_onenote_html.py
migrations/: README  env.py  script.py.mako
tests/: conftest.py  test_auth.py  test_notes.py  test_search.py
